fix dictionary indices

--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -64,9 +64,9 @@
         </tr>
         <tr>
             <td colspan="3">
-                {{#if stats.default}}
+                {{#if stats.index}}
                 <table class="info-output">
-                    {{#each stats.default}}
+                    {{#each stats.index}}
                     <tr>
                         <th>{{#if notes}}{{notes}}{{else}}{{name}}{{/if}}</th>
                         <td>{{value}}</td>
