--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -68,7 +68,7 @@ No data found
             <th colspan="3">Classifications</th>
         </tr>
         <tr>
-            <td colspan="3">{{> table data=stats.query}}</td>
+            <td colspan="3">{{> table data=stats.class}}</td>
         </tr>
         <tr>
             <th colspan="3">Codepoints</th>
