--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -36,15 +36,20 @@
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="group-terms-results"> Group term results</label>
-                </div>
-
-                <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
 
                 <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="show-debug-info"> Show debug information</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="result-output-mode">Result output mode</label>
+                    <select class="form-control" id="result-output-mode">
+                        <option value="group">Group results by written form and reading</option>
+                        <option value="merge">Group results by main dictionary entry ID (experimental)</option>
+                        <option value="split">Split definitions to their own results</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
