add compact tags

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -36,6 +36,10 @@
                 </div>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="compact-tags"> Compact tags</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
 
