change db format, rename tags to definitionTags

--- a/tmpl/terms.html
+++ b/tmpl/terms.html
@@ -1,7 +1,7 @@
 {{#*inline "definition"}}
-{{#if tags}}
+{{#if definitionTags}}
 <div>
-    {{#each tags}}
+    {{#each definitionTags}}
     <span class="label label-default tag-{{category}}" title="{{notes}}">{{name}}</span>
     {{/each}}
 </div>
