--- a/tmpl/terms.html
+++ b/tmpl/terms.html
@@ -1,13 +1,13 @@
 {{#*inline "definition"}}
 {{#if definitionTags}}
-<div>
+<div {{#unless tagLineBreak}}style="display: inline-block;"{{/unless}}>
     {{#each definitionTags}}
     <span class="label label-default tag-{{category}}" title="{{notes}}">{{name}}</span>
     {{/each}}
 </div>
 {{/if}}
 {{#if only}}
-<div>
+<div {{#if compactGlossaries}}style="display: inline-block;"{{/if}}>
     (
     {{~#each only~}}
     {{{.}}}{{#unless @last}}, {{/unless}}
@@ -16,13 +16,13 @@
 </div>
 {{/if}}
 {{#if glossary.[1]}}
-<ul>
+<ul {{#if compactGlossaries}}class="compact"{{/if}}>
     {{#each glossary}}
     <li><span class="glossary-item">{{#multiLine}}{{.}}{{/multiLine}}</span></li>
     {{/each}}
 </ul>
 {{else}}
-<div class="glossary-item">{{#multiLine}}{{glossary.[0]}}{{/multiLine}}</div>
+<div class="glossary-item {{#if compactGlossaries}}compact{{/if}}">{{#multiLine}}{{glossary.[0]}}{{/multiLine}}</div>
 {{/if}}
 {{/inline}}
 
@@ -70,20 +70,19 @@
     {{/each}}
     {{else}}
     <div class="expression">{{#kanjiLinks}}{{#furigana}}{{{.}}}{{/furigana}}{{/kanjiLinks}}</div>
+    {{#if termTags}}
+    <div style="display: inline-block;">
+        {{#each termTags}}
+        <span class="label label-default tag-{{category}}" title="{{notes}}">{{name}}</span>
+        {{/each}}
+    </div>
+    {{/if}}
     {{/if}}
 
     {{#if reasons}}
     <div class="reasons">
         {{#each reasons}}
         <span class="reasons">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
-        {{/each}}
-    </div>
-    {{/if}}
-
-    {{#if termTags}}
-    <div>
-        {{#each termTags}}
-        <span class="label label-default tag-{{category}}" title="{{notes}}">{{name}}</span>
         {{/each}}
     </div>
     {{/if}}
@@ -101,24 +100,24 @@
         {{#if definitions.[1]}}
         <ol>
             {{#each definitions}}
-            <li>{{> definition}}</li>
+            <li>{{> definition tagLineBreak=../tagLineBreak compactGlossaries=../compactGlossaries}}</li>
             {{/each}}
         </ol>
         {{else}}
-        {{> definition definitions.[0]}}
+        {{> definition definitions.[0] tagLineBreak=tagLineBreak compactGlossaries=compactGlossaries}}
         {{/if}}
         {{else if merged}}
         {{#if definitions.[1]}}
         <ol>
             {{#each definitions}}
-            <li>{{> definition}}</li>
+            <li>{{> definition tagLineBreak=../tagLineBreak compactGlossaries=../compactGlossaries}}</li>
             {{/each}}
         </ol>
         {{else}}
-        {{> definition definitions.[0]}}
+        {{> definition definitions.[0] tagLineBreak=tagLineBreak compactGlossaries=compactGlossaries}}
         {{/if}}
         {{else}}
-        {{> definition}}
+        {{> definition tagLineBreak=tagLineBreak compactGlossaries=compactGlossaries}}
         {{/if}}
     </div>
 
@@ -131,7 +130,7 @@
 {{#if definitions}}
 {{#each definitions}}
 {{#unless @first}}<hr>{{/unless}}
-{{> term debug=../debug grouped=../grouped merged=../merged addable=../addable playback=../playback}}
+{{> term debug=../debug grouped=../grouped merged=../merged addable=../addable playback=../playback tagLineBreak=../tagLineBreak compactGlossaries=../compactGlossaries}}
 {{/each}}
 {{else}}
 <p class="note">No results found.</p>
