settings: main dictionary selection as dropdown

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -60,6 +60,11 @@
                     </select>
                 </div>
 
+                <div class="form-group options-merge">
+                    <label for="main-dictionary">Main dictionary</label>
+                    <select class="form-control" id="main-dictionary"></select>
+                </div>
+
                 <div class="form-group">
                     <label for="audio-playback-source">Audio playback source</label>
                     <select class="form-control" id="audio-playback-source">
