--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -145,20 +145,19 @@
                     or you can simply <a href="#" id="dict-purge-link">purge the database</a> to delete everything.
                 </p>
                 <p class="help-block">
-                    Please visit the <a href="https://foosoft.net/projects/yomichan" target="_blank">Yomichan</a> homepage to download free
-                    dictionaries that you can use with this extension.
+                    Deleting individual dictionaries is not currently feasible due to limitations of browser database technology.
                 </p>
+
+                <div class="form-group" id="dict-main-group">
+                    <label for="dict-main">Main dictionary for merged mode</label>
+                    <select class="form-control" id="dict-main"></select>
+                </div>
 
                 <div class="text-danger" id="dict-purge">Dictionary data is being purged, please be patient...</div>
                 <div class="alert alert-warning" id="dict-warning">No dictionaries have been installed</div>
                 <div class="alert alert-danger" id="dict-error"></div>
 
                 <div id="dict-groups"></div>
-
-                <div class="form-group options-merge">
-                    <label for="main-dictionary">Main dictionary</label>
-                    <select class="form-control" id="main-dictionary"></select>
-                </div>
 
                 <div id="dict-import-progress">
                     Dictionary data is being imported, please be patient...
@@ -168,6 +167,10 @@
                 </div>
 
                 <div id="dict-importer">
+                    <p class="help-block">
+                        Select a dictionary to import for use below. Please visit the <a href="https://foosoft.net/projects/yomichan" target="_blank">Yomichan</a>
+                        homepage to download free dictionaries to use with this extension and to learn about importing proprietary EPWING dictionaries.
+                    </p>
                     <input type="file" id="dict-file">
                 </div>
             </div>
