update settings page

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -168,8 +168,9 @@
 
                 <div id="dict-importer">
                     <p class="help-block">
-                        Select a dictionary to import for use below. Please visit the <a href="https://foosoft.net/projects/yomichan" target="_blank">Yomichan</a>
-                        homepage to download free dictionaries to use with this extension and to learn about importing proprietary EPWING dictionaries.
+                        Select a dictionary to import for use below. Please visit the Yomichan homepage to
+                        <a href="https://foosoft.net/projects/yomichan" target="_blank">download free dictionaries</a>
+                        for use with this extension and to learn about importing proprietary EPWING dictionaries.
                     </p>
                     <input type="file" id="dict-file">
                 </div>
