Add option to play audio automatically

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -44,6 +44,10 @@
                 </div>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="auto-play-audio"> Play audio automatically</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
 
