--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -93,8 +93,11 @@
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label for="popup-offset">Popup offset (in pixels)</label>
-                    <input type="number" min="0" id="popup-offset" class="form-control">
+                    <label>Popup offset (horizontal, vertical; in pixels)</label>
+                    <div class="row">
+                        <div class="col-xs-6"><input type="number" min="0" id="popup-horizontal-offset" class="form-control"></div>
+                        <div class="col-xs-6"><input type="number" min="0" id="popup-vertical-offset" class="form-control"></div>
+                    </div>
                 </div>
             </div>
 
