Add support for touch input

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -106,6 +106,10 @@
                 </div>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="touch-input-enabled"> Touch input enabled</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="select-matched-text"> Select matched text</label>
                 </div>
 
