Add search link and padding to settings page links
This makes the bottom links easier to touch and makes the search page easier to access when there is no extension badge

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -25,6 +25,10 @@
                 overflow-x: hidden;
                 white-space: pre;
             }
+
+            .bottom-links {
+                padding-bottom: 1em;
+            }
         </style>
     </head>
     <body>
@@ -311,8 +315,8 @@
 
             <pre id="debug"></pre>
 
-            <div class="pull-right">
-                <small><a href="https://foosoft.net/projects/yomichan/" target="_blank">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
+            <div class="pull-right bottom-links">
+                <small><a href="search.html">Search</a> &bull; <a href="https://foosoft.net/projects/yomichan/" target="_blank">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
             </div>
         </div>
 
