allow looking up terms from within terms
resolves #167, resolves #139, resolves #75, resolves #151

--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -36,6 +36,8 @@
 
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/util.js"></script>
+        <script src="/fg/js/document.js"></script>
+        <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/display.js"></script>
 
         <script src="/fg/js/float.js"></script>
