Revert "use ES6 import and export"
This reverts commit 04f4607922e84d93ca8a05708802fb6bbd61f359.

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -43,8 +43,9 @@
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
-        <script type="module" src="/bg/js/search.js"></script>
+        <script src="/bg/js/search.js"></script>
     </body>
 </html>
