add doc scripts to search too

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -43,6 +43,8 @@
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/fg/js/document.js"></script>
+        <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
