Add screenshot settings

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -293,6 +293,19 @@
                         <input type="text" id="interface-server" class="form-control">
                     </div>
 
+                    <div class="form-group options-advanced">
+                        <label for="screenshot-format">Screenshot format</label>
+                        <select class="form-control" id="screenshot-format">
+                            <option value="png">PNG</option>
+                            <option value="jpeg">JPEG</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group options-advanced">
+                        <label for="screenshot-quality">Screenshot quality (JPEG only)</label>
+                        <input type="number" min="0" max="100" step="1" id="screenshot-quality" class="form-control">
+                    </div>
+
                     <div id="anki-format">
                         <p class="help-block">
                             Specify the information you would like included in your flashcards in the field editor below.
