--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -43,5 +43,11 @@
         <script src="/mixed/js/display.js"></script>
 
         <script src="/fg/js/float.js"></script>
+
+        <!-- TODO : Make these conditional based on options -->
+        <script src="/fg/js/frontend-api-sender.js"></script>
+        <script src="/fg/js/popup.js"></script>
+        <script src="/fg/js/popup-proxy.js"></script>
+        <script src="/fg/js/frontend.js"></script>
     </body>
 </html>
