Add option for maximum nested popup depth

--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -44,10 +44,6 @@
 
         <script src="/fg/js/float.js"></script>
 
-        <!-- TODO : Make these conditional based on options -->
-        <script src="/fg/js/frontend-api-sender.js"></script>
-        <script src="/fg/js/popup.js"></script>
-        <script src="/fg/js/popup-proxy.js"></script>
-        <script src="/fg/js/frontend.js"></script>
+        <script src="/fg/js/popup-nested.js"></script>
     </body>
 </html>
