--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -215,6 +215,11 @@
                         <option value="shift">Shift</option>
                     </select>
                 </div>
+
+                <div class="form-group options-advanced">
+                    <label for="popup-nesting-max-depth">Maximum nested popup depth</label>
+                    <input type="number" min="0" id="popup-nesting-max-depth" class="form-control">
+                </div>
             </div>
 
             <div>
