Add support for popup on the search page

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -51,5 +51,6 @@
         <script src="/mixed/js/japanese.js"></script>
 
         <script src="/bg/js/search.js"></script>
+        <script src="/bg/js/search-frontend.js"></script>
     </body>
 </html>
