--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -32,6 +32,8 @@
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 
+        <script src="/mixed/js/extension.js"></script>
+
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/util.js"></script>
