--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -399,6 +399,8 @@
         <script src="/mixed/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
 
+        <script src="/mixed/js/extension.js"></script>
+
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/dictionary.js"></script>
