--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -34,6 +34,8 @@
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
 
+        <script src="/mixed/js/extension.js"></script>
+
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/util.js"></script>
         <script src="/fg/js/document.js"></script>
