Add option to enable/disable scanning of source expressions in popups

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -192,6 +192,10 @@
                     <label><input type="checkbox" id="auto-hide-results"> Automatically hide results</label>
                 </div>
 
+                <div class="checkbox options-advanced">
+                    <label><input type="checkbox" id="enable-scanning-of-popup-expressions"> Enable scanning of popup expressions</label>
+                </div>
+
                 <div class="checkbox">
                     <label><input type="checkbox" id="enable-scanning-on-search-page"> Enable scanning on search page</label>
                 </div>
