--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -107,6 +107,17 @@
                     </select>
                 </div>
 
+                <div class="form-group">
+                    <label for="popup-display-mode">Popup position for vertical text</label>
+                    <select class="form-control" id="popup-vertical-text-position">
+                        <option value="default">Same as for horizontal text</option>
+                        <option value="before">Before text reading direction</option>
+                        <option value="after">After text reading direction</option>
+                        <option value="left">Left of text</option>
+                        <option value="right">Right of text</option>
+                    </select>
+                </div>
+
                 <div class="form-group options-advanced">
                     <label for="audio-playback-volume">Audio playback volume (percent)</label>
                     <input type="number" min="0" max="100" id="audio-playback-volume" class="form-control">
@@ -130,6 +141,14 @@
                     <div class="row">
                         <div class="col-xs-6"><input type="number" min="0" id="popup-horizontal-offset" class="form-control"></div>
                         <div class="col-xs-6"><input type="number" min="0" id="popup-vertical-offset" class="form-control"></div>
+                    </div>
+                </div>
+
+                <div class="form-group options-advanced">
+                    <label>Popup offset for vertical text (horizontal, vertical; in pixels)</label>
+                    <div class="row">
+                        <div class="col-xs-6"><input type="number" min="0" id="popup-horizontal-offset2" class="form-control"></div>
+                        <div class="col-xs-6"><input type="number" min="0" id="popup-vertical-offset2" class="form-control"></div>
                     </div>
                 </div>
 
