Add option for position of popup for horizontal text

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -108,6 +108,14 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="popup-display-mode">Popup position for horizontal text</label>
+                    <select class="form-control" id="popup-horizontal-text-position">
+                        <option value="below">Below text</option>
+                        <option value="above">Above text</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                     <label for="popup-display-mode">Popup position for vertical text</label>
                     <select class="form-control" id="popup-vertical-text-position">
                         <option value="default">Same as for horizontal text</option>
