--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -108,22 +108,25 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="popup-display-mode">Popup position for horizontal text</label>
-                    <select class="form-control" id="popup-horizontal-text-position">
-                        <option value="below">Below text</option>
-                        <option value="above">Above text</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="popup-display-mode">Popup position for vertical text</label>
-                    <select class="form-control" id="popup-vertical-text-position">
-                        <option value="default">Same as for horizontal text</option>
-                        <option value="before">Before text reading direction</option>
-                        <option value="after">After text reading direction</option>
-                        <option value="left">Left of text</option>
-                        <option value="right">Right of text</option>
-                    </select>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Popup position for horizontal text</label>
+                            <select class="form-control" id="popup-horizontal-text-position">
+                                <option value="below">Below text</option>
+                                <option value="above">Above text</option>
+                            </select>
+                        </div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Popup position for vertical text</label>
+                            <select class="form-control" id="popup-vertical-text-position">
+                                <option value="default">Same as for horizontal text</option>
+                                <option value="before">Before text reading direction</option>
+                                <option value="after">After text reading direction</option>
+                                <option value="left">Left of text</option>
+                                <option value="right">Right of text</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group options-advanced">
