Use non-bold text for label information
Units, etc.

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -30,6 +30,10 @@
                 padding-bottom: 1em;
             }
 
+            .label-light {
+                font-weight: normal;
+            }
+
             #custom-popup-css {
                 width: 100%;
                 min-height: 34px;
@@ -118,7 +122,7 @@
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label for="audio-playback-volume">Audio playback volume (percent)</label>
+                    <label for="audio-playback-volume">Audio playback volume <span class="label-light">(percent)</span></label>
                     <input type="number" min="0" max="100" id="audio-playback-volume" class="form-control">
                 </div>
 
@@ -152,11 +156,11 @@
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Popup width (in pixels)</label>
+                            <label for="popup-display-mode">Popup width <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="1" id="popup-width" class="form-control">
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Popup height (in pixels)</label>
+                            <label for="popup-display-mode">Popup height <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="1" id="popup-height" class="form-control">
                         </div>
                     </div>
@@ -165,11 +169,11 @@
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Horizontal popup offset (in pixels)</label>
+                            <label for="popup-display-mode">Horizontal popup offset <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-horizontal-offset" class="form-control">
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Vertical popup offset (in pixels)</label>
+                            <label for="popup-display-mode">Vertical popup offset <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-vertical-offset" class="form-control">
                         </div>
                     </div>
@@ -178,11 +182,11 @@
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Horizontal popup offset for vertical text (in pixels)</label>
+                            <label for="popup-display-mode">Horizontal popup offset for vertical text <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-horizontal-offset2" class="form-control">
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Vertical popup offset for vertical text (in pixels)</label>
+                            <label for="popup-display-mode">Vertical popup offset for vertical text <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-vertical-offset2" class="form-control">
                         </div>
                     </div>
@@ -230,12 +234,12 @@
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label for="scan-delay">Scan delay (in milliseconds)</label>
+                    <label for="scan-delay">Scan delay <span class="label-light">(in milliseconds)</span></label>
                     <input type="number" min="1" id="scan-delay" class="form-control">
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label for="scan-length">Scan length (in characters)</label>
+                    <label for="scan-length">Scan length <span class="label-light">(in characters)</span></label>
                     <input type="number" min="1" id="scan-length" class="form-control">
                 </div>
 
@@ -351,12 +355,12 @@
 
                 <div id="anki-general">
                     <div class="form-group">
-                        <label for="card-tags">Card tags (comma or space separated)</label>
+                        <label for="card-tags">Card tags <span class="label-light">(comma or space separated)</span></label>
                         <input type="text" id="card-tags" class="form-control">
                     </div>
 
                     <div class="form-group options-advanced">
-                        <label for="sentence-detection-extent">Sentence detection extent (in characters)</label>
+                        <label for="sentence-detection-extent">Sentence detection extent <span class="label-light">(in characters)</span></label>
                         <input type="number" min="1" id="sentence-detection-extent" class="form-control">
                     </div>
 
@@ -374,7 +378,7 @@
                     </div>
 
                     <div class="form-group options-advanced">
-                        <label for="screenshot-quality">Screenshot quality (JPEG only)</label>
+                        <label for="screenshot-quality">Screenshot quality <span class="label-light">(JPEG only)</span></label>
                         <input type="number" min="0" max="100" step="1" id="screenshot-quality" class="form-control">
                     </div>
 
