Add some parameters to field-templates textarea

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -442,7 +442,7 @@
                                 their Anki cards. If you encounter problems with your changes you can always <a href="#" id="field-templates-reset">reset to default</a>
                                 template settings.
                             </p>
-                            <textarea class="form-control" rows="10" id="field-templates"></textarea>
+                            <textarea autocomplete="off" spellcheck="false" wrap="soft" class="form-control" rows="10" id="field-templates"></textarea>
                         </div>
                     </div>
                 </div>
