Add option to enable Alt+B lookup

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -414,6 +414,10 @@
                 </p>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="enable-search-within-first-popup"> Enable search within the first popup with Alt+B</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="enable-scanning-on-search-page"> Enable scanning on search page</label>
                 </div>
 
