Move settings style to separate CSS file

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -6,113 +6,7 @@
         <title>Yomichan Options</title>
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
-        <style>
-            #anki-spinner, #anki-general, #anki-error,
-            #dict-spinner, #dict-error, #dict-warning, #dict-purge, #dict-import-progress,
-            #debug, .options-advanced, .storage-hidden, #storage-spinner {
-                display: none;
-            }
-
-            .tab-content {
-                border-bottom: 1px #ddd solid;
-                border-left: 1px #ddd solid;
-                border-right: 1px #ddd solid;
-                padding: 10px;
-            }
-
-            #field-templates {
-                font-family: monospace;
-                overflow-x: hidden;
-                white-space: pre;
-            }
-
-            .bottom-links {
-                padding-bottom: 1em;
-            }
-
-            .label-light {
-                font-weight: normal;
-            }
-
-            .form-control.is-invalid {
-                border-color: #f00000;
-            }
-
-            .condition>.condition-prefix:after {
-                content: "IF";
-            }
-            .condition:nth-child(n+2)>.condition-prefix:after {
-                content: "AND";
-            }
-
-            .input-group .condition-prefix,
-            .input-group .condition-group-separator-label {
-                width: 60px;
-                text-align: center;
-            }
-            .input-group .condition-group-separator-label {
-                padding: 6px 12px;
-                font-weight: bold;
-                display: inline-block;
-            }
-            .input-group .condition-type,
-            .input-group .condition-operator {
-                width: auto;
-                text-align: center;
-                text-align-last: center;
-            }
-
-            .condition-group>.condition>div:first-child {
-                border-bottom-left-radius: 0;
-            }
-            .condition-group>.condition:nth-child(n+2)>div:first-child {
-                border-top-left-radius: 0;
-            }
-            .condition-group>.condition:nth-child(n+2)>div:last-child>button {
-                border-top-right-radius: 0;
-            }
-            .condition-group>.condition:nth-last-child(n+2)>div:last-child>button {
-                border-bottom-right-radius: 0;
-            }
-            .condition-group-options>.condition-add {
-                border-top-left-radius: 0;
-                border-top-right-radius: 0;
-            }
-
-            .condition-groups>*:last-of-type {
-                display: none;
-            }
-
-            #custom-popup-css {
-                width: 100%;
-                min-height: 34px;
-                height: 96px;
-                resize: vertical;
-                font-family: 'Courier New', Courier, monospace;
-                white-space: pre;
-            }
-
-            [data-show-for-browser] {
-                display: none;
-            }
-
-            [data-browser=edge] [data-show-for-browser~=edge],
-            [data-browser=chrome] [data-show-for-browser~=chrome],
-            [data-browser=firefox] [data-show-for-browser~=firefox],
-            [data-browser=firefox-mobile] [data-show-for-browser~=firefox-mobile] {
-                display: initial;
-            }
-
-            @media screen and (max-width: 740px) {
-                .col-xs-6 {
-                    float: none;
-                    width: 100%;
-                }
-                .col-xs-6+.col-xs-6 {
-                    margin-top: 15px;
-                }
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="/bg/css/settings.css">
     </head>
     <body>
         <div class="container-fluid">
