Limit width of the HTML pages

--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <h3>Yomichan License</h3>
 <pre>
 Copyright (C) 2016-2017  Alex Yatskov
