--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="/mixed/css/display.css">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div id="intro" style="overflow: hidden;">
                 <div class="page-header">
                     <h1>Yomichan Search</h1>
