--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="/bg/css/settings.css">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="profile-form">
                 <h3>Profiles</h3>
 
