Add wrapping for usage conditions on small screens

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -105,7 +105,8 @@
                     <div class="input-group-addon condition-prefix"></div>
                     <div class="input-group-btn"><select class="form-control btn btn-default condition-type"><optgroup label="Type"></optgroup></select></div>
                     <div class="input-group-btn"><select class="form-control btn btn-default condition-operator"><optgroup label="Operator"></optgroup></select></div>
-                    <input type="text" class="form-control" />
+                    <div class="condition-line-break"></div>
+                    <div class="condition-input"><input type="text" class="form-control" /></div>
                     <div class="input-group-btn"><button class="btn btn-danger condition-remove" title="Remove"><span class="glyphicon glyphicon-remove"></span></button></div>
                 </div></template>
                 <template id="condition-group-separator-template"><div class="input-group">
