Fix some incorrect labels

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -188,14 +188,14 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Popup position for horizontal text</label>
+                            <label for="popup-horizontal-text-position">Popup position for horizontal text</label>
                             <select class="form-control" id="popup-horizontal-text-position">
                                 <option value="below">Below text</option>
                                 <option value="above">Above text</option>
                             </select>
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Popup position for vertical text</label>
+                            <label for="popup-vertical-text-position">Popup position for vertical text</label>
                             <select class="form-control" id="popup-vertical-text-position">
                                 <option value="default">Same as for horizontal text</option>
                                 <option value="before">Before text reading direction</option>
@@ -210,11 +210,11 @@
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Popup width <span class="label-light">(in pixels)</span></label>
+                            <label for="popup-width">Popup width <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="1" id="popup-width" class="form-control">
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Popup height <span class="label-light">(in pixels)</span></label>
+                            <label for="popup-height">Popup height <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="1" id="popup-height" class="form-control">
                         </div>
                     </div>
@@ -223,11 +223,11 @@
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Horizontal popup offset <span class="label-light">(in pixels)</span></label>
+                            <label for="popup-horizontal-offset">Horizontal popup offset <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-horizontal-offset" class="form-control">
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Vertical popup offset <span class="label-light">(in pixels)</span></label>
+                            <label for="popup-vertical-offset">Vertical popup offset <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-vertical-offset" class="form-control">
                         </div>
                     </div>
@@ -236,11 +236,11 @@
                 <div class="form-group options-advanced">
                     <div class="row">
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Horizontal popup offset for vertical text <span class="label-light">(in pixels)</span></label>
+                            <label for="popup-horizontal-offset2">Horizontal popup offset for vertical text <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-horizontal-offset2" class="form-control">
                         </div>
                         <div class="col-xs-6">
-                            <label for="popup-display-mode">Vertical popup offset for vertical text <span class="label-light">(in pixels)</span></label>
+                            <label for="popup-vertical-offset2">Vertical popup offset for vertical text <span class="label-light">(in pixels)</span></label>
                             <input type="number" min="0" id="popup-vertical-offset2" class="form-control">
                         </div>
                     </div>
