--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -28,9 +28,9 @@ along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
 </pre>
             <h3>EDRDG License</h3>
 <pre>
-This package uses the <a href="http://www.csse.monash.edu.au/~jwb/edict.html">EDICT</a> and <a href="http://www.csse.monash.edu.au/~jwb/kanjidic.html">KANJIDIC</a> dictionary files. These files are
-the property of the <a href="http://www.edrdg.org/"> Electronic Dictionary Research and Development Group</a>,
-and are used in conformance with the Group's <a href="http://www.edrdg.org/edrdg/licence.html">licence</a>.
+This package uses the <a href="https://www.edrdg.org/jmdict/edict.html">EDICT</a> and <a href="https://www.edrdg.org/wiki/index.php/KANJIDIC_Project">KANJIDIC</a> dictionary files. These files are
+the property of the <a href="https://www.edrdg.org/">Electronic Dictionary Research and Development Group</a>,
+and are used in conformance with the Group's <a href="https://www.edrdg.org/edrdg/licence.html">licence</a>.
 </pre>
         </div>
     </div>
