Rename option for clarity

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -313,7 +313,7 @@
                 </p>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="enable-search-within-first-popup"> Enable search within the first popup with Alt+B</label>
+                    <label><input type="checkbox" id="enable-search-within-first-popup"> Enable search when clicking glossary entries</label>
                 </div>
 
                 <div class="checkbox">
