Add instructions for keyboard shortcuts

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -520,6 +520,29 @@
             </div>
 
             <div>
+                <h3>Keyboard Shortcuts</h3>
+
+                <p class="help-block">
+                    Yomichan includes keyboard shortcuts for common actions which can be adjusted
+                    using the web browser's settings.
+                    Instructions on how to access this settings page are listed below for a few browsers.
+                </p>
+
+                <h4>Chrome</h4>
+                <ul class="help-block">
+                    <li>Open the settings page (<a href="chrome://settings/">chrome://settings/</a>)</li>
+                    <li>Click the "Extensions" link in the left sidebar (<a href="chrome://extensions/">chrome://extensions/</a>)</li>
+                    <li>Open the left side panel using the hamburger (<strong>&#8801;</strong>) menu button, then click "Keyboard shortcuts"</li>
+                </ul>
+
+                <h4>Firefox</h4>
+                <ul class="help-block">
+                    <li>Open the extensions page (<a href="about:addons">about:addons</a>)</li>
+                    <li>Click the button on the right with the gear icon, then click "Manage Extension Shortcuts"</li>
+                </ul>
+            </div>
+
+            <div>
                 <h3>Support Development</h3>
 
                 <p class="help-block">
